# FinancialAuditAgent

./: .gitignore  README.md  app.py  pyproject.toml  run.bat  run.sh
.streamlit/: config.toml
backend/: auth.py  config.py  main.py  session_store.py
backend/routers/: auth.py  chat.py  companies.py  form16.py  gst.py  ledger.py  upload.py
docs/: HLD.md  LLD.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/layout/: Header.jsx  Layout.jsx  Sidebar.jsx
frontend/src/components/ui/: Badge.jsx  DataTable.jsx  FileUpload.jsx  MetricCard.jsx  SkeletonLoader.jsx  StreamingOutput.jsx
frontend/src/hooks/: useSSE.js
frontend/src/pages/: AIAssistant.jsx  Dashboard.jsx  Form16Generator.jsx  GSTFiling.jsx  LedgerScreener.jsx  Login.jsx  Settings.jsx
frontend/src/store/: useAppStore.js
sample_data/: sample_employee.csv  sample_gst_invoices.csv  sample_ledger.csv
src/agents/: form16_agent.py  gst_agent.py  ledger_agent.py
src/models/: financial_models.py
src/tools/: form16_tools.py  gst_tools.py  ledger_tools.py
src/utils/: data_processor.py  pdf_generator.py
